# spellcheck

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
SpellCheck/: main.py  spellcheck.py
SpellCheck/data/: supportedLanguage.json
src/: __init__.py  spellcheck.py
